--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
 	<title>Hello Coursera !</title>
 </head>
 <body>
-<h1>Hello People of Normal Origin !</h1>
+<h1>Hello People of Normal Origin ! Idiots</h1>
 </body>
 </html>
