--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<title>Hello Coursera !</title>
 </head>
 <body>
-<h1>Hello People of Normal Origin ! Idiots</h1>
+<h1>Hello People of Normal Origin ! Started Boring ! Let's see what happens next.</h1>
+<p> </p>
 </body>
 </html>
